// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DragDrop defined dropTypes is reflected in the className 1`] = `
<div
  class="domDragDrop__container"
  data-test-subj="domDragDropContainer"
>
  <button
    class="domDragDrop domDragDrop-isDroppable domDragDrop-isDropTarget"
    data-test-subj="domDragDrop"
  >
    Hello!
  </button>
</div>
`;

exports[`DragDrop items that has dropTypes=undefined get special styling when another item is dragged 1`] = `
<SingleDropInner
  className="domDragDrop domDragDrop-isDroppable domDragDrop-isNotDroppable"
  data-test-subj="testDragDrop"
  onDragEnter={[Function]}
  onDragLeave={[Function]}
  onDragOver={[Function]}
  onDrop={[Function]}
>
  <button
    className="domDragDrop domDragDrop-isDroppable domDragDrop-isNotDroppable"
    data-test-subj="testDragDrop"
    onDragEnter={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
  >
    Hello!
  </button>
</SingleDropInner>
`;

exports[`DragDrop renders if nothing is being dragged 1`] = `
<div
  class=""
  data-test-subj="domDragDrop_draggable-hello"
>
  <button
    aria-describedby="domDragDrop-keyboardInstructions"
    aria-label="hello"
    class="domDragDrop__keyboardHandler emotion-euiScreenReaderOnly"
    data-test-subj="domDragDrop-keyboardHandler"
  />
  <button
    class="domDragDrop domDragDrop-isDraggable"
    data-test-subj="domDragDrop"
    draggable="true"
  >
    Hello!
  </button>
</div>
`;
